// Code generated by entproto. DO NOT EDIT.
syntax = "proto3";

package entpb;

import "google/protobuf/timestamp.proto";

import "google/protobuf/wrappers.proto";


message KV {
  int64 id = 1;

  google.protobuf.Timestamp created_at = 536870900;

  google.protobuf.Timestamp updated_at = 536870901;

  string key = 2;

  string value = 3;

  google.protobuf.Timestamp expires_at = 4;
}

message Node {
  string id = 1;

  google.protobuf.Timestamp created_at = 536870900;

  google.protobuf.Timestamp updated_at = 536870901;

  google.protobuf.StringValue name = 2;

  string ip = 3;

  int64 port = 4;

  google.protobuf.StringValue comment = 5;
}

