syntax = "proto3";
package openPanel;

message LinkState {
  string from = 1;
  string to = 2;
  int32 latency = 3;
}